# fstree

./: .gitignore  .travis.yml  Cargo.toml  README.md  justfile
.vim/: template.rs
src/: cli.rs  crawl.rs  history.rs  main.rs  result.rs  web.rs
web/: .gitignore  Cargo.toml  README.md  index.html
web/src/: lib.rs  result.rs
