[package]
name = "fstree"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/SOF3/fstree.git"
homepage = "https://github.com/SOF3/fstree"
readme = "README.md"
description = "Cross-platform harddisk usage diagnostics tool"

[features]
web = [
	"actix-web",
	"tar",
	"tempdir",
]
history = [
	"chrono",
	"flate2",
	"serde",
	"serde_json",
]
default = ["history", "web"]

[dependencies]
actix-files = "0.1.5"
actix-web = {version = "1.0", optional = true}
atty = "0.2.13"
byte-unit = "3.0"
cfg-if = "0.1.10"
chrono = {version = "0.4.9", optional = true}
count-write = "0.1.0"
derive_more = "0.99.0"
dirs = "2.0"
filesize = "0.1.0"
flate2 = {version = "1.0", optional = true}
futures-util-preview = "0.3.0-alpha.19"
include-flate = {version = "0.1.3", features = ["stable"]}
lazy_static = "1.4"
log = "0.4.8"
maplit = "1.0"
pretty_env_logger = "0.4.0"
rand = "0.7.2"
serde = {version = "1.0", features = ["derive", "std", "rc"], optional = true}
serde_json = {version = "1.0", optional = true}
static_assertions = "1.0"
structopt = "0.3.2"
tar = {version = "0.4.26", optional = true}
tempdir = {version = "0.3.7", optional = true}
terminal_size = "0.1.8"
tokio = "0.2.0-alpha.6"
tokio-fs = "0.2.0-alpha.6"
webbrowser = "0.5.2"

[badges]
travis-ci = {repository = "SOF3/fstree"}
