[package]
name = "fstree-web"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/SOF3/fstree.git"
homepage = "https://github.com/SOF3/fstree"
readme = "README.md"
description = "Web frontend for fstree, a cross-platform harddisk usage diagnostics tool"

[lib]
crate-type = ["cdylib"]

[dependencies]
stdweb = "0.4.20"
wee_alloc = "0.4.5"
yew = "0.9.2"

[dependencies.wasm-bindgen]
version = "0.2.50"
features = [
]

[badges]
travis-ci = {repository = "SOF3/fstree"}
